src/styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

html {
	/* TODO: this naming is a mess */
	/* TODO: move component-related variables to css modules */

	/* text */
	--colors-normal-text: black;
	--colors-subtle-text: theme("colors.gray.700");
	--colors-muted-text: theme("colors.gray.500");

	/* background */
	--colors-normal-bg: white;
	--colors-accent-bg: theme("colors.gray.200");
	--colors-accent2-bg: theme("colors.gray.300");

	/* success/error */
	--colors-success: theme("colors.green.500");
	--colors-error: theme("colors.red.400");

	/* selection */
	--colors-selection-bg: theme("colors.blue.100");
	--colors-selection-text: var(--colors-normal-text);

	/* scrollbar */
	--colors-scrollbar: theme("colors.gray.300");

	/* caret */
	--colors-caret: theme("colors.blue.600");

	/* borders */
	--colors-normal-border: #e5e7eb;
	--colors-active-border: black;
	--colors-active2-border: black;

	/* links */
	--colors-normal-link: theme("colors.blue.600");
	--colors-secondary-link: theme("colors.blue.700");

	/* button */
	--colors-btn-normal-bg: black;
	--colors-btn-normal-text: white;

	/* outline */
	--colors-outline: black;

	/* select */
	--colors-active-select: theme("colors.blue.50");

	/* badge */
	--colors-badge-normal-bg: theme("colors.blue.100");
	--colors-badge-normal-text: var(--colors-subtle-text);
	--colors-badge-outlined-bg: var(--colors-normal-bg);
	--colors-badge-outlined-text: var(--colors-muted-text);

	/* inline code  */
	--colors-normal-code-bg: theme("colors.blue.100");
	--colors-normal-code-text: var(--colors-normal-text);

	/* heatmap levels */
	--colors-heat-level1: theme("colors.green.300");
	--colors-heat-level2: theme("colors.green.500");
	--colors-heat-level3: theme("colors.green.700");
	--colors-heat-level4: theme("colors.green.900");

	background: var(--colors-normal-bg);
}

html.dark {
	/* text */
	--colors-normal-text: theme("colors.gray.200");
	--colors-subtle-text: theme("colors.gray.300");
	--colors-muted-text: #6b7280;

	/* background */
	--colors-normal-bg: #181a1b;
	--colors-accent-bg: #25282a;
	--colors-accent2-bg: #2f3335;

	/* success/error */
	--colors-success: theme("colors.green.400");
	--colors-error: theme("colors.red.400");

	/* selection */
	--colors-selection-bg: theme("colors.blue.200");
	--colors-selection-text: var(--colors-accent-bg);

	/* scrollbar */
	--colors-scrollbar: var(--colors-accent-bg);

	/* caret */
	--colors-caret: theme("colors.blue.300");

	/* borders */
	--colors-normal-border: #363b3d;
	--colors-active-border: theme("colors.gray.400");
	--colors-active2-border: theme("colors.gray.500");

	/* links */
	--colors-normal-link: theme("colors.blue.500");
	--colors-secondary-link: theme("colors.blue.600");

	/* button */
	--colors-btn-normal-bg: var(--colors-accent2-bg);
	--colors-btn-normal-text: white;

	/* outline */
	--colors-outline: theme("colors.blue.500");

	/* select */
	--colors-active-select: var(--colors-accent-bg);

	/* badge */
	--colors-badge-normal-bg: var(--colors-accent-bg);
	--colors-badge-normal-text: var(--colors-subtle-text);
	--colors-badge-outlined-bg: var(--colors-normal-bg);
	--colors-badge-outlined-text: var(--colors-subtle-text);

	/* inline code  */
	--colors-normal-code-bg: theme("colors.blue.200");
	--colors-normal-code-text: var(--colors-accent-bg);

	/* heatmap levels */
	--colors-heat-level1: theme("colors.green.900");
	--colors-heat-level2: theme("colors.green.700");
	--colors-heat-level3: theme("colors.green.500");
	--colors-heat-level4: theme("colors.green.300");
}

body {
	caret-color: var(--colors-caret);
}

/* *::selection {
	background: var(--colors-selection-bg);
	color: var(--colors-selection-text);
} */

html,
body {
	padding: 0;
	margin: 0;
	font-family: Inter, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
		Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue,
		sans-serif;
}

html,
body,
#__next {
	/* fallback */
	height: 100vh;
	/* it's recommended to use 'stretch' and use postcss to add vendor prefixes
	 * but '-moz-fill-available' doesn't work on desktop for some reason */
	height: -webkit-fill-available;
}

.full-screen-height {
	/* fallback */
	min-height: 100vh;
	/* it's recommended to use 'stretch' and use postcss to add vendor prefixes
	 * but '-moz-fill-available' doesn't work on desktop for some reason */
	min-height: -webkit-fill-available;
}

* {
	box-sizing: border-box;
}

*:focus {
	outline: 2px solid var(--colors-outline);
	outline-offset: 0px;
}

#nprogress .bar {
	background: black;
}

#nprogress .spinner {
	display: none;
}

/* firefox scrollbar */
html,
* {
	scrollbar-width: auto;
	scrollbar-color: var(--colors-scrollbar) transparent !important;
}

/* non-firefox scrollbar */
::-webkit-scrollbar {
	overflow: overlay;
	height: 6px;
	width: 8px;
}

::-webkit-scrollbar-track {
	display: initial;
}

::-webkit-scrollbar-thumb {
	background-color: var(--colors-scrollbar);
	border-radius: 9px;
}

@layer utilities {
	.no-highlight {
		-webkit-tap-highlight-color: rgba(255, 255, 255, 0);
	}

	.heroicon-sw-2 path {
		stroke-width: 2 !important;
	}

	.heroicon-sw-1\.75 path {
		stroke-width: 1.75 !important;
	}

	.heroicon-sw-1\.5 path {
		stroke-width: 1.5 !important;
	}

	.heroicon-sw-1 path {
		stroke-width: 1 !important;
	}
}

